Fix max header bug on mobile

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -25,10 +25,6 @@ h3 {
   font-weight: normal;
 }
 
-header {
-  max-height: 86px;
-}
-
 header a[data-current*="current"] {
   color: #05f;
   font-weight: 600;
